# sl-crypto

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  rust.yaml
crates/sl-compute/: Cargo.toml
crates/sl-compute-common/: Cargo.toml
crates/sl-compute-common/src/: constants.rs  lib.rs
crates/sl-compute/src/: lib.rs
crates/sl-messages/: CHANGELOG.md  Cargo.toml  README.md
crates/sl-messages/src/: lib.rs  message.rs  pairs.rs  proto.rs  relay.rs  setup.rs  ws.rs
crates/sl-messages/src/proto/: encrypted.rs  scheme.rs  signed.rs  tags.rs
crates/sl-messages/src/proto/scheme/: aead.rs  aead_p256.rs  identity.rs  key_exchange.rs  mlkem.rs  passthrough.rs  rng_compat.rs
crates/sl-messages/src/relay/: adversary.rs  buffered.rs  mux.rs  pair.rs  simple.rs  stats.rs  trace.rs
crates/sl-messages/src/setup/: abort.rs  finish.rs  key_export.rs  keygen.rs  keys.rs  quorum_change.rs  round.rs  sign.rs  tags.rs  tests.rs  traits.rs
crates/sl-messages/src/setup/key_export/: exporter.rs  receiver.rs
crates/sl-messages/src/setup/tests/: relay.rs  round.rs  support.rs
crates/sl-mpc-mate/: Cargo.toml
crates/sl-mpc-mate/src/: bip32.rs  coord.rs  lib.rs  math.rs  matrix.rs  message.rs  state.rs  traits.rs
crates/sl-mpc-mate/src/coord/: adversary.rs  buffered.rs  pair.rs  simple.rs  stats.rs
crates/sl-mpc-traits/: Cargo.toml
crates/sl-mpc-traits/src/: lib.rs
crates/sl-oblivious/: Cargo.toml  soft_spoken.json
crates/sl-oblivious/benches/: sl-oblivious.rs
crates/sl-oblivious/docs/soft_spoken/: mybib.bib  soft_spoken_ot.tex
crates/sl-oblivious/src/: constants.rs  endemic_ot.rs  label.rs  lib.rs  params.rs  rvole.rs  rvole_ot_variant.rs  serialization.rs  zkproofs.rs
crates/sl-oblivious/src/cot/: cot_recevier.rs  mod.rs
crates/sl-oblivious/src/endemic_ot/: constants.rs  endemic_ot.rs  messages.rs  mod.rs
crates/sl-oblivious/src/soft_spoken/: all_but_one.rs  constants.rs  mod.rs  mul_poly.rs  soft_spoken_ot.rs  types.rs
crates/sl-oblivious/src/soft_spoken_mod/: mod.rs  mul_poly.rs  soft_spoken_ot_mod.rs
crates/sl-oblivious/src/vsot/: messages.rs  mod.rs  receiver.rs  sender.rs
crates/sl-oblivious/src/zkproofs/: constants.rs  dlog_proof.rs  mod.rs
crates/sl-paillier/: CHANGELOG.md  Cargo.toml  README.md
crates/sl-paillier/benches/: sl-paillier.rs
crates/sl-paillier/src/: lib.rs  traits.rs
crates/sl-primes/: Cargo.toml
crates/sl-primes/benches/: sl-primes.rs
crates/sl-primes/src/: lib.rs  primes_2048.rs
crates/sl-shamir/: Cargo.toml
crates/sl-shamir/src/: gf256.rs  lib.rs
crates/sl-transcript/: Cargo.toml
crates/sl-transcript/src/: lib.rs
crates/sl-verifiable-enc/: Cargo.toml  README.md
crates/sl-verifiable-enc/src/: lib.rs
src/: lib.rs  math.rs  serialization.rs  traits.rs
xtask/: Cargo.toml
xtask/src/: main.rs
