[package]
name = "sl-mpc-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version ="1", features = ["derive"]}
bincode = "1"
rand = "0.8"
elliptic-curve = {version ="0.13", features=["serde"]}
k256 = {version = "0.13", features = ["serde", "ecdsa"]}
dryoc = {version = "0.5.0", features=["serde"] }

# [features]
# nacl = ["dryoc"]
