[package]
name = "sl-compute"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
crypto-bigint = { version = "0.5.5", features = ["serde", "alloc"] }
chacha20 = { version = "0.9" }
rand_chacha = "0.3.1"
aead = { version = "0.5.2" }
rand = "0.8"




