[package]
name = "sl-messages"
version = "1.0.1-beta.1"
license-file = "../../LICENSE"
edition = "2021"
rust-version = "1.88"

[dependencies]
aead = { workspace = true }
bytemuck = { workspace = true, features = [ "derive", "min_const_generics", "extern_crate_alloc" ] }
bytes = { workspace = true }
chacha20 = { workspace = true }
chacha20poly1305 = { workspace = true }
fastwebsockets = { workspace = true, features = ["unstable-split"], optional = true }
generic-array = { workspace = true, features = [ "zeroize" ] }
rand_core = { workspace = true }
sha2 = { workspace = true }
signature = { workspace = true }
tokio = { workspace = true, optional = true }
x25519-dalek = { workspace = true, features = ["reusable_secrets", "zeroize"] }
zeroize = { workspace = true, features = [ "derive" ] }

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "time"] }

[features]
default = [ "fast-ws", "mux" ]
mux = [ "tokio/sync", "tokio/rt" ]
fast-ws = [ "fastwebsockets", "tokio/macros", "tokio/sync", "tokio/rt" ]

simple-relay = []
