[package]
name = "sl-messages"
version = "0.1.0"
edition = "2024"

[dependencies]
aead = { version = "0.5.2" }
bytemuck = { version = "1.22", features = [ "derive", "min_const_generics", "extern_crate_alloc" ] }
bytes = "1.5"
chacha20 = { version = "0.9" }
chacha20poly1305 = { version = "0.10.1" }
generic-array = { version = "0.14.7", features = [ "zeroize" ] }
# Standardize on 0.9.3 for the modern side
rand_core = { version = "0.9.3", features = ["os_rng", "std"] }

# Standardize on 0.6.4 for the legacy (dalek) side
rand_core_06 = { package = "rand_core", version = "0.6.4", features = ["std"] }

# Ensure dalek isn't pulling in an even older rand_core
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
sha2 = { version = "0.10" }
signature = { version = "2.2.0" }
zeroize = { version = "1.6", features = [ "derive" ] }
ml-kem = "0.3.0-pre.2"

fastwebsockets = { version = "0.10", features = ["unstable-split"], optional = true }
tokio = { version = "1.43", optional = true }

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.43", features = ["sync", "macros", "rt-multi-thread", "net", "time"] }

[features]
default = [ "fast-ws", "mux" ]
mux = [ "tokio/sync", "tokio/rt" ]
fast-ws = [ "fastwebsockets", "tokio/macros", "tokio/sync", "tokio/rt" ]

simple-relay = []
