[package]
name = "sl-mpc-mate"
version = "1.0.1-beta.2"
edition = "2021"
license-file = "../../LICENSE"
description = "Utilities for secure multi-party computation"
rust-version = "1.88"

[dependencies]
base64 = { workspace = true }
bs58 = { workspace = true }
derivation-path = { workspace = true }
elliptic-curve = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
k256 = { workspace = true, features = ["arithmetic"] }
rand = { workspace = true }
rand_core = { workspace = true }
ripemd = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true, features = ["const-generics",] }
thiserror = { workspace = true }
zeroize = { workspace = true, features = [ "derive" ] }

rayon = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
bincode = { version = "1" }

[features]
serde = [
  "dep:serde",
  "serde/serde_derive",
  "elliptic-curve/arithmetic",
  "k256/serde",
]
