[package]
name = "sl-mpc-traits"
version = "0.1.0"
edition = "2021"
license = "SLL"

[dependencies]
bincode = { version = "1", optional = true }
serde = { version = "1.0", default-features = false, features = [
  "derive",
], optional = true }

[features]
default = []
serde = ["dep:serde", "dep:bincode"]
