[package]
name = "sl-mpc-traits"
version = "1.0.1-beta.1"
edition = "2021"
license-file = "../../LICENSE"
rust-version = "1.88"
repository = "https://github.com/silence-laboratories/sl-crypto"
description = "small utility traits"

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
bincode = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "dep:bincode"]
