[package]
name = "sl-oblivious"
version = "0.1.0"
license-file = "../../LICENSE"
edition = "2021"
publish = false

[dependencies]
sha3 = "0.10"
merlin = "3.0.0"
elliptic-curve = { version ="0.13" }
k256 = { version = "0.13", default-features = false, features = [ "arithmetic", "precomputed-tables", "std" ]}
rand = "0.8"
zeroize = "1.6.1"
bytemuck = { version = "1.22", features = [ "derive", "min_const_generics", "extern_crate_alloc", "const_zeroed" ] }
curve25519-dalek = { version = "4.1.1", features = [ "rand_core" ] }

rayon = { version = "1", optional = true }
serde = { version = "1", optional = true }
serde_arrays = { version = "0.1", optional = true }

[features]
small-lambda-c = []
serde = [ "dep:serde", "serde_arrays", "serde/derive", "k256/serde", "curve25519-dalek/serde" ]
rayon = [ "dep:rayon" ]

[[bench]]
name = "sl-oblivious"
harness = false

[dev-dependencies]
rand_chacha = "0.3"
criterion = "0.5"
