[package]
name = "sl-oblivious"
version = "1.0.1-beta.1"
license-file = "../../LICENSE"
edition = "2021"
rust-version = "1.88"

[dependencies]
bytemuck = { workspace = true, features = [ "derive", "min_const_generics", "extern_crate_alloc" ] }
elliptic-curve = { workspace = true }
k256 = { workspace = true, features = [ "arithmetic" ]}
merlin = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, optional = true }
serde_arrays = { workspace = true, optional = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
p256 = { workspace = true }

[features]
serde = [ "dep:serde", "serde_arrays", "serde/derive", "k256/serde" ]
