[package]
name = "sl-paillier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-bigint = { version = "0.5.5", default-features = false, features = [
  "alloc",
  "serde",
  "rand_core",
] }
crypto-primes = "0.5"
rand_core = "0.6.4"
serde = { version = "1.0", features = ["derive"] }


[dev-dependencies]
lazy_static = "1.4"
quickcheck = "1"
rand = "0.8"
criterion = "0.5"
kzen-paillier = { version = "0.4.3" }
curv-kzen = { version = "0.10.0" }
serde_json = "1.0"
bincode = "1"

[[bench]]
name = "sl-paillier"
harness = false
