[package]
name = "sl-paillier"
license-file = "../../LICENSE"
version = "1.2.0"
edition = "2021"
rust-version = "1.88"
repository = "https://github.com/silence-laboratories/sl-crypto"
description = "Paillier encryption"

[dependencies]
crypto-bigint = { workspace = true, features = ["alloc", "rand_core"] }
crypto-primes = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }


[dev-dependencies]
ciborium = { workspace = true }
criterion = { workspace = true }
lazy_static = { workspace = true }
quickcheck = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "sl-paillier"
harness = false

[features]
default = []
serde = ["dep:serde", "crypto-bigint/serde"]
