[package]
name = "sl-primes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# crate-type = [ "cdylib" ]

[dependencies]
crypto-bigint = { version = "0.5.2", default-features = false, features = ["rand_core"] }
rand_core = "0.6.4"

[dev-dependencies]
rand_chacha = "0.3"
crypto-primes = "0.2.0"
criterion = "0.4"
kzen-paillier = { version = "0.4.3" }
curv-kzen = { version = "0.10.0" }

[[bench]]
name = "sl-primes"
harness = false
