[package]
name = "sl-shamir"
version = "1.1.0"
edition = "2021"
license-file = "../../LICENSE"
rust-version = "1.88"
repository = "https://github.com/silence-laboratories/sl-crypto"
description = "Shamir Secret Sharing"

[dependencies]
rand = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive"], optional = true }

[features]
default = ["zeroize"]
zeroize = ["dep:zeroize"]
