[package]
name = "sl-shamir"
version = "1.0.1-beta.1"
edition = "2021"
license-file = "../../LICENSE"
rust-version = "1.88"

[dependencies]
rand = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive"], optional = true }

[features]
default = ["zeroize"]
zeroize = ["dep:zeroize"]
