[package]
name = "sl-verifiable-enc"
license-file = "../../LICENSE"
version = "1.0.1-beta.1"
edition = "2021"
rust-version = "1.88"

[dependencies]
ff = { workspace = true }
group = { workspace = true }
num-bigint-dig = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
curve25519-dalek = { workspace = true, features = ["group"] }
k256 = { workspace = true, features = ["alloc", "serde"] }
