[package]
name = "sl-verifiable-enc"
license-file = "../../LICENSE"
version = "1.1.0"
edition = "2021"
rust-version = "1.88"
repository = "https://github.com/silence-laboratories/sl-crypto"
description = "Verifierable encryption"

[dependencies]
crypto-bigint = { workspace = true }
digest = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }


[dev-dependencies]
k256 = { version = "0.13.2", features = ["alloc", "serde"] }
curve25519-dalek = { version = "4.1.1", features = ["group"] }
